kubernetes/deploy/nextcloud/deployment_mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
      release: mariadb
  template:
    metadata:
      labels:
        app: mariadb
        release: mariadb
    spec:
      automountServiceAccountToken: false
      containers:
      - image: mariadb:10.5
        imagePullPolicy: Always
        name: mariadb
        ports:
        - containerPort: 3306
          name: sql
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: database
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: database
        persistentVolumeClaim:
          claimName: mariadb
