kubernetes/deploy/nextcloud/service_nextcloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: nextcloud
    release: nextcloud
  type: ClusterIP
